@@ -4,20 +4,29 @@ module ActiveSupport #:nodoc:
       # Getting times in different convenient string representations and other objects
       module Conversions
         DATE_FORMATS = {
-          :db     => "%Y-%m-%d %H:%M:%S",
-          :time   => "%H:%M",
-          :short  => "%d %b %H:%M",
-          :long   => "%B %d, %Y %H:%M",
-          :rfc822 => "%a, %d %b %Y %H:%M:%S %z"
+          :db           => "%Y-%m-%d %H:%M:%S",
+          :time         => "%H:%M",
+          :short        => "%d %b %H:%M",
+          :long         => "%B %d, %Y %H:%M",
+          :long_ordinal => lambda { |time| time.strftime("%B #{time.day.ordinalize}, %Y %H:%M") },
+          :rfc822       => "%a, %d %b %Y %H:%M:%S %z"
         }
 
         def self.included(klass)
           klass.send(:alias_method, :to_default_s, :to_s)
           klass.send(:alias_method, :to_s, :to_formatted_s)
         end
-        
+
         def to_formatted_s(format = :default)
-          DATE_FORMATS[format] ? strftime(DATE_FORMATS[format]).strip : to_default_s          
+          if formatter = DATE_FORMATS[format]
+            if formatter.respond_to?(:call)
+              formatter.call(self).to_s
+            else
+              strftime(formatter).strip
+            end
+          else
+            to_default_s
+          end
         end
 
         def to_date
@@ -28,11 +37,11 @@ module ActiveSupport #:nodoc:
         def to_time
           self
         end
-        
+
         # converts to a Ruby DateTime instance; preserves utc offset
         def to_datetime
           ::DateTime.civil(year, month, day, hour, min, sec, Rational(utc_offset, 86400), 0)
-        end        
+        end
       end
     end
   end
