@@ -272,10 +272,11 @@ class TimeExtCalculationsTest < Test::Unit::TestCase
 
   def test_to_s
     time = Time.local(2005, 2, 21, 17, 44, 30)
-    assert_equal "2005-02-21 17:44:30",     time.to_s(:db)
-    assert_equal "21 Feb 17:44",            time.to_s(:short)
-    assert_equal "17:44",                   time.to_s(:time)
-    assert_equal "February 21, 2005 17:44", time.to_s(:long)
+    assert_equal "2005-02-21 17:44:30",       time.to_s(:db)
+    assert_equal "21 Feb 17:44",              time.to_s(:short)
+    assert_equal "17:44",                     time.to_s(:time)
+    assert_equal "February 21, 2005 17:44",   time.to_s(:long)
+    assert_equal "February 21st, 2005 17:44", time.to_s(:long_ordinal)
 
     time = Time.utc(2005, 2, 21, 17, 44, 30)
     assert_equal "Mon, 21 Feb 2005 17:44:30 +0000", time.to_s(:rfc822)
