@@ -1,5 +1,7 @@
 *SVN*
 
+* Date, Time, and DateTime support formatting blocks in addition to strftime strings. Introduce :long_ordinal format, e.g. "February 21st, 2005".  #8191 [Coda Hale]
+
 * Document Object#blank?.  #6491 [Chris Mear]
 
 * Date, Time, and DateTime#to_json.  #8399 [wycats]
